# AromaUI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
backends/: aroma_backend_interface.h
examples/: button_example.c  event_system_example.c  simple_gui_app.c
examples/01_hello_button/: CMakeLists.txt  main.c
examples/02_form_controls/: CMakeLists.txt  main.c
examples/03_multiwindow/: CMakeLists.txt  main.c
examples/04_material_design/: CMakeLists.txt  README.md  main.c
examples/minimal/: CMakeLists.txt  main.c  main_image.c
examples/settings_app/: CMakeLists.txt  main.c
examples/widgets/button/: CMakeLists.txt  main.c
examples/widgets/card/: CMakeLists.txt  main.c
examples/widgets/checkbox/: CMakeLists.txt  main.c
examples/widgets/chip/: CMakeLists.txt  main.c
examples/widgets/dialog/: CMakeLists.txt  main.c
examples/widgets/divider/: CMakeLists.txt  main.c
examples/widgets/dropdown/: CMakeLists.txt  main.c
examples/widgets/fab/: CMakeLists.txt  main.c
examples/widgets/iconbutton/: CMakeLists.txt  main.c
examples/widgets/label/: CMakeLists.txt  main.c
examples/widgets/listview/: CMakeLists.txt  main.c
examples/widgets/menu/: CMakeLists.txt  main.c
examples/widgets/progressbar/: CMakeLists.txt  main.c
examples/widgets/radiobutton/: CMakeLists.txt  main.c
examples/widgets/slider/: CMakeLists.txt  main.c
examples/widgets/snackbar/: CMakeLists.txt  main.c
examples/widgets/switch/: CMakeLists.txt  main.c
examples/widgets/textbox/: CMakeLists.txt  main.c
examples/widgets/tooltip/: CMakeLists.txt  main.c
include/: aroma.h  aroma_common.h  aroma_drawlist.h  aroma_event.h  aroma_font.h  aroma_framework.h  aroma_logger.h  aroma_node.h  aroma_slab_alloc.h  aroma_style.h  aroma_time.h  aroma_timer.h  aroma_ui.h  aroma_widgets.h  aroma_window.h
include/widgets/: aroma_button.h  aroma_card.h  aroma_checkbox.h  aroma_chip.h  aroma_container.h  aroma_debug_overlay.h  aroma_dialog.h  aroma_divider.h  aroma_dropdown.h  aroma_fab.h  aroma_iconbutton.h  aroma_image.h  aroma_label.h  aroma_listview.h  aroma_menu.h  aroma_progressbar.h  aroma_radiobutton.h  aroma_sidebar.h  aroma_slider.h  aroma_snackbar.h  aroma_switch.h  aroma_tabs.h  aroma_textbox.h  aroma_tooltip.h  aroma_window.h
src/: CMakeLists.txt  aroma_app.c  aroma_event.c  aroma_font.c  aroma_graphics_wrapper.c  aroma_logger.c  aroma_node.c  aroma_slab_alloc.c  aroma_style.c  aroma_ui.c  aroma_ui_impl.c
src/backends/: aroma_abi.c  aroma_abi.h  aroma_backend_interface.h  aroma_glps_opengl.c
src/backends/graphics/: aroma_graphics_gles3.c  aroma_graphics_interface.h  aroma_graphics_tft_espi.cpp
src/backends/graphics/utils/: aroma_gles3_text.c  aroma_gles3_text.h  helpers_gles3.c  helpers_gles3.h  linmath.h  nanosvg.h  nanosvgrast.h  stb_image.h
src/core/: aroma_common.h  aroma_core.h  aroma_drawlist.c  aroma_drawlist.h  aroma_event.c  aroma_event.h  aroma_font.c  aroma_font.h  aroma_graphics_wrapper.c  aroma_logger.c  aroma_logger.h  aroma_node.c  aroma_node.h  aroma_slab_alloc.c  aroma_slab_alloc.h  aroma_style.c  aroma_style.h  aroma_time.c  aroma_time.h  aroma_timer.c  aroma_timer.h  aroma_ui_impl.c
src/widgets/: CMakeLists.txt  aroma_button.c  aroma_card.c  aroma_checkbox.c  aroma_chip.c  aroma_container.c  aroma_debug_overlay.c  aroma_dialog.c  aroma_divider.c  aroma_dropdown.c  aroma_fab.c  aroma_iconbutton.c  aroma_image.c  aroma_label.c  aroma_listview.c  aroma_menu.c  aroma_progressbar.c  aroma_radiobutton.c  aroma_sidebar.c  aroma_slider.c  aroma_snackbar.c  aroma_switch.c  aroma_tabs.c  aroma_textbox.c  aroma_tooltip.c  aroma_window.c
tests/: CMakeLists.txt  test_aroma_event_system.c  test_aroma_event_system.h  test_aroma_node.c  test_aroma_node.h  test_aroma_slab_alloc.c  test_aroma_slab_alloc.h  test_main.c
